// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendConfirmation renders correctly for payment request confirmation 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Light",
                    "fontSize": 22,
                    "paddingBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#2E3338",
                    "padding": 10,
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              payRequest
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 4,
              "marginHorizontal": 20,
              "marginVertical": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#EEEEEE",
                  "borderRadius": 3,
                  "borderWidth": 1,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "padding": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "marginTop": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginBottom": 10,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignSelf": "center",
                        "margin": "auto",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "backgroundColor": "#7AD6FE",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Hind-Medium",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      J
                    </Text>
                  </View>
                </View>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-SemiBold",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "marginHorizontal": 20,
                        "paddingTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  John Doe
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Light",
                          "fontSize": 14,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#EEEEEE",
                          "borderRadius": 3,
                          "justifyContent": "center",
                          "marginRight": 5,
                          "paddingLeft": 6,
                          "paddingRight": 3,
                        },
                      ]
                    }
                  >
                     +1
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Light",
                        "fontSize": 14,
                        "textAlignVertical": "center",
                      }
                    }
                  >
                    (415) 555-0000
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 25,
                  "marginTop": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "fontSize": 34,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 24,
                      "textAlignVertical": "top",
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                10.00
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Light",
                      "fontSize": 14,
                      "lineHeight": 18,
                      "textAlign": "center",
                    },
                    Object {
                      "paddingTop": 5,
                    },
                  ]
                }
              >
                My Reason
              </Text>
              <View
                style={
                  Object {
                    "borderStyle": "solid",
                    "borderTopColor": "#EEEEEE",
                    "borderTopWidth": 1,
                    "marginTop": 10,
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 20,
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  paymentRequestFlow:celoDollarBalance 
                  <Text
                    style={
                      Object {
                        "color": "#42D689",
                      }
                    }
                  >
                    200.00
                  </Text>
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "justifyContent": "center",
                    "marginBottom": 10,
                    "marginTop": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        }
                      }
                    >
                      dollarsSent
                    </Text>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    $
                    10.0000
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        }
                      }
                    >
                      securityFee
                    </Text>
                    <View
                      accessible={true}
                      hitSlop={
                        Object {
                          "bottom": 10,
                          "left": 10,
                          "right": 10,
                          "top": 10,
                        }
                      }
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-end",
                          "opacity": 1,
                          "paddingHorizontal": 5,
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../src/images/info.png",
                          }
                        }
                        style={
                          Object {
                            "height": 12,
                            "width": 12,
                          }
                        }
                      />
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    
                    0.0100
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        }
                      }
                    >
                      total
                    </Text>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    $
                    10.0100
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Modal
            animationType="none"
            hardwareAccelerated={false}
            hideModalContentWhileAnimating={true}
            onModalHide={[Function]}
            onRequestClose={[Function]}
            scrollOffset={0}
            scrollOffsetMax={0}
            scrollTo={null}
            swipeThreshold={100}
            transparent={true}
            visible={false}
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "black",
                  "bottom": 0,
                  "height": 1334,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 750,
                }
              }
            />
            <View
              hideModalContentWhileAnimating={true}
              onModalHide={[Function]}
              pointerEvents="box-none"
              scrollOffset={0}
              scrollOffsetMax={0}
              scrollTo={null}
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "margin": 0,
                  "transform": Array [
                    Object {
                      "translateY": 0,
                    },
                  ],
                }
              }
              swipeThreshold={100}
            >
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "flex": 1,
                    "justifyContent": "flex-end",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderTopColor": "rgba(0, 0, 0, 0.05)",
                        "borderTopWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Image
                          resizeMode="contain"
                          source={
                            Object {
                              "testUri": "../../../src/images/sms-icon.png",
                            }
                          }
                          style={
                            Object {
                              "height": 30,
                              "width": 30,
                            }
                          }
                        />
                        <Text
                          accessibilityLabel="inviteFlow11:inviteWithSMS"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#2E3338",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          inviteFlow11:inviteWithSMS
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Image
                          resizeMode="contain"
                          source={
                            Object {
                              "testUri": "../../../src/images/whatsapp-logo.png",
                            }
                          }
                          style={
                            Object {
                              "height": 30,
                              "width": 30,
                            }
                          }
                        />
                        <Text
                          accessibilityLabel="inviteFlow11:inviteWithWhatsapp"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#2E3338",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          inviteFlow11:inviteWithWhatsapp
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessibilityLabel="cancel"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#42D689",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          cancel
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </Modal>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            Object {
              "marginVertical": 10,
            },
            Object {
              "marginBottom": 10,
            },
            undefined,
            Object {
              "backgroundColor": "#A3EBC6",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#A3EBC6",
              "borderColor": "#A3EBC6",
              "borderRadius": 3,
              "borderWidth": 2,
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="paymentRequestFlow:pay"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              paymentRequestFlow:pay
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            null,
            null,
            Object {
              "marginBottom": 10,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="paymentRequestFlow:decline"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#42D689",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              paymentRequestFlow:decline
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SendConfirmation renders correctly for send payment confirmation 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Light",
                    "fontSize": 22,
                    "paddingBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#2E3338",
                    "padding": 10,
                    "paddingBottom": 10,
                  },
                ]
              }
            >
              reviewPayment
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 4,
              "marginHorizontal": 20,
              "marginVertical": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#EEEEEE",
                  "borderRadius": 3,
                  "borderWidth": 1,
                },
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "padding": 20,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "marginTop": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "marginBottom": 10,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignSelf": "center",
                        "margin": "auto",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "backgroundColor": "#7AD6FE",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Hind-Medium",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      J
                    </Text>
                  </View>
                </View>
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-SemiBold",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "marginHorizontal": 20,
                        "paddingTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  John Doe
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Light",
                          "fontSize": 14,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#EEEEEE",
                          "borderRadius": 3,
                          "justifyContent": "center",
                          "marginRight": 5,
                          "paddingLeft": 6,
                          "paddingRight": 3,
                        },
                      ]
                    }
                  >
                     +1
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Light",
                        "fontSize": 14,
                        "textAlignVertical": "center",
                      }
                    }
                  >
                    (415) 555-0000
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 25,
                  "marginTop": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "fontSize": 34,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 24,
                      "textAlignVertical": "top",
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                10.00
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Light",
                      "fontSize": 14,
                      "lineHeight": 18,
                      "textAlign": "center",
                    },
                    Object {
                      "paddingTop": 5,
                    },
                  ]
                }
              >
                My Reason
              </Text>
              <View
                style={
                  Object {
                    "borderStyle": "solid",
                    "borderTopColor": "#EEEEEE",
                    "borderTopWidth": 1,
                    "marginTop": 10,
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "marginTop": 20,
                    "paddingHorizontal": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    }
                  }
                >
                  paymentRequestFlow:celoDollarBalance 
                  <Text
                    style={
                      Object {
                        "color": "#42D689",
                      }
                    }
                  >
                    200.00
                  </Text>
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "justifyContent": "center",
                    "marginBottom": 10,
                    "marginTop": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        }
                      }
                    >
                      securityFee
                    </Text>
                    <View
                      accessible={true}
                      hitSlop={
                        Object {
                          "bottom": 10,
                          "left": 10,
                          "right": 10,
                          "top": 10,
                        }
                      }
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-end",
                          "opacity": 1,
                          "paddingHorizontal": 5,
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../src/images/info.png",
                          }
                        }
                        style={
                          Object {
                            "height": 12,
                            "width": 12,
                          }
                        }
                      />
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    
                    0.0100
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Hind-Regular",
                          "fontSize": 14,
                          "lineHeight": 20,
                        }
                      }
                    >
                      total
                    </Text>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 14,
                        "lineHeight": 20,
                      }
                    }
                  >
                    $
                    10.0100
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Modal
            animationType="none"
            hardwareAccelerated={false}
            hideModalContentWhileAnimating={true}
            onModalHide={[Function]}
            onRequestClose={[Function]}
            scrollOffset={0}
            scrollOffsetMax={0}
            scrollTo={null}
            swipeThreshold={100}
            transparent={true}
            visible={false}
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "black",
                  "bottom": 0,
                  "height": 1334,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 750,
                }
              }
            />
            <View
              hideModalContentWhileAnimating={true}
              onModalHide={[Function]}
              pointerEvents="box-none"
              scrollOffset={0}
              scrollOffsetMax={0}
              scrollTo={null}
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                  "margin": 0,
                  "transform": Array [
                    Object {
                      "translateY": 0,
                    },
                  ],
                }
              }
              swipeThreshold={100}
            >
              <View
                style={
                  Object {
                    "alignItems": "stretch",
                    "flex": 1,
                    "justifyContent": "flex-end",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderTopColor": "rgba(0, 0, 0, 0.05)",
                        "borderTopWidth": 1,
                      },
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Image
                          resizeMode="contain"
                          source={
                            Object {
                              "testUri": "../../../src/images/sms-icon.png",
                            }
                          }
                          style={
                            Object {
                              "height": 30,
                              "width": 30,
                            }
                          }
                        />
                        <Text
                          accessibilityLabel="inviteFlow11:inviteWithSMS"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#2E3338",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          inviteFlow11:inviteWithSMS
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Image
                          resizeMode="contain"
                          source={
                            Object {
                              "testUri": "../../../src/images/whatsapp-logo.png",
                            }
                          }
                          style={
                            Object {
                              "height": 30,
                              "width": 30,
                            }
                          }
                        />
                        <Text
                          accessibilityLabel="inviteFlow11:inviteWithWhatsapp"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#2E3338",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          inviteFlow11:inviteWithWhatsapp
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "borderRadius": 3,
                          "flexDirection": "row",
                        },
                        null,
                        null,
                        undefined,
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          accessibilityLabel="cancel"
                          style={
                            Array [
                              Object {
                                "fontFamily": "Hind-SemiBold",
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#42D689",
                              },
                              Object {
                                "paddingLeft": 5,
                                "paddingRight": 5,
                              },
                            ]
                          }
                        >
                          cancel
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "height": 15,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </Modal>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            Object {
              "marginVertical": 10,
            },
            Object {
              "marginBottom": 10,
            },
            undefined,
            Object {
              "backgroundColor": "#A3EBC6",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#A3EBC6",
              "borderColor": "#A3EBC6",
              "borderRadius": 3,
              "borderWidth": 2,
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="send"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              send
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 3,
              "flexDirection": "row",
            },
            null,
            null,
            Object {
              "marginBottom": 10,
            },
            Object {
              "backgroundColor": "transparent",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderWidth": 0,
              "flex": 1,
              "height": 50,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityLabel="edit"
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#42D689",
                  },
                  Object {
                    "paddingLeft": 5,
                    "paddingRight": 5,
                  },
                ]
              }
            >
              edit
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
